fix alignment of user profiles and fix profile routing on posts

--- a/instagram_clone/frontend/src/users/UserDetail.css
+++ b/instagram_clone/frontend/src/users/UserDetail.css
@@ -17,6 +17,15 @@
 	margin-top: -8px;
 }
 
+.UserDetail-Username {
+	margin-left: 25px;
+}
+
+.UserDetail-FollowBtn {
+	width: 150px;
+	margin-left: 20px;
+}
+
 .UserDetail-Title {
 	color: black;
 	font-size: 17px;
